--- a/ili-modules/client/.htaccess
+++ b/ili-modules/client/.htaccess
@@ -1,1 +1,3 @@
 Options -Indexes
+RewriteEngine On
+RewriteRule    ^client/ajout    ili-modules/client/add.php    [NC,L]    # Handle product requests
